# sync

.github/workflows/: rust.yml
src/: client.rs  crypto.rs
sync-clipboard/: Cargo.toml
sync-clipboard-py/: client.py  crypto.py  main.py  protocol.py
sync-clipboard/src/: main.rs  protocol.rs  server.rs
